--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
-    <section id="description">
+    <section id="description" class="description">
       <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
@@ -43,45 +43,45 @@
       <h2 class="section-title">
         Техники обучения
       </h2>
-      <h3 class="section-subtitle">
+      <p class="section-subtitle">
         Пять практик от Барбары Оакли
-      </h3>
+      </p>
       <ul class="cards">
         <li class="cards__item">
           <img class="cards__image" src="images/cards-attention.png" alt="Книга в руках">
-          <h4 class="cards__title">Два вида внимания</h4>
+          <h3 class="cards__title">Два вида внимания</h3>
           <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
         </li>
         <li class="cards__item">
           <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
-          <h4 class="cards__title">Recall</h4>
+          <h3 class="cards__title">Recall</h3>
           <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
         </li>
         <li class="cards__item">
           <img class="cards__image" src="images/cards-interliving.png" alt="Архитектура">
-          <h4 class="cards__title">Интерливинг</h4>
+          <h3 class="cards__title">Интерливинг</h3>
           <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
         </li>
         <li class="cards__item">
           <img class="cards__image" src="images/cards-question.png" alt="Комната с дверьми">
-          <h4 class="cards__title">Вопросы</h4>
+          <h3 class="cards__title">Вопросы</h3>
           <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
         </li>
         <li class="cards__item">
           <img class="cards__image" src="images/cards-competence.png" alt="Книги">
-          <h4 class="cards__title">Иллюзия компетентности</h4>
+          <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
         </li>
       </ul>
     </section>
     <section class="video">
       <h2 class="section-title">Видео нa TED</h2>
-      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
-        <iframe class="video__iframe" id="ytplayer1" width="515" height="316"
+        <iframe class="video__iframe" id="ytplayer1"
                 src="https://www.youtube.com/embed/5MgBikgcWnY?color=white"
                 allowfullscreen></iframe>
-        <iframe class="video__iframe" id="ytplayer2" width="515" height="316"
+        <iframe class="video__iframe" id="ytplayer2"
                 src="https://www.youtube.com/embed/arj7oStGLkU?color=white"
                 allowfullscreen></iframe>
       </div>
@@ -106,9 +106,9 @@
       <h2 class="section-title">
         Цифры и факты
       </h2>
-      <h3 class="section-subtitle">
+      <p class="section-subtitle">
         Про учебу и мозг
-      </h3>
+      </p>
       <ul class="table">
         <li class="table__cell">
           <h4 class="table__heading">86 миллиардов</h4>
@@ -148,13 +148,13 @@
     </section>
     <section class="khan">
       <div class="khan__container">
-        <h3 class="khan__author">Салман Хан</h3>
+        <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <p class="khan__quote">
+        <blockquote class="khan__quote">
           Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-        </p>
-        <h4 class="khan__quote-author">Джордж Лукас</h4>
-        <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
+        </blockquote>
+        <h3 class="khan__quote-author">Джордж Лукас</h3>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка Салман Хан">
           <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
@@ -165,9 +165,9 @@
       <h2 class="section-title section-title_theme_dark">
         Принципы обучения
       </h2>
-      <h3 class="section-subtitle section-subtitle_theme_dark">
+      <p class="section-subtitle section-subtitle_theme_dark">
         от Джоша Кауфмана
-      </h3>
+      </p>
       <ul class="table table_theme_dark">
         <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -215,7 +215,7 @@
     </section>
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
-      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
         <a class="resources__link" href="#">
           <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Логотип Arzamas">
@@ -236,7 +236,7 @@
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип ЯндексПрактикум">
-        <p class="footer__author">&copy; Виктор Абанькин</p>
+        <p class="footer__author">&copy; Александр Сорокин</p>
       </div>
       <div class="footer__column footer__column_content_info">
         <h2 class="footer__column-heading">О практикуме</h2>
